0192e534-128b-7115-9582-6ce76aee1cad

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
             <div class="col-md-6">
                 <div class="input-group mb-3">
                     <input type="text" id="newItem" class="form-control" placeholder="Add new item">
+                    <input type="number" id="newItemQuantity" class="form-control" placeholder="Quantity" min="1" value="1">
                     <button class="btn btn-primary" type="button" id="addItem">
                         <i class="fas fa-plus"></i> Add
                     </button>
